@@ -1,3 +1,7 @@
+2019-10-18 Luigi Scarso <luigi.scarso@gmail.com>
+	* following https://tug.org/pipermail/tlbuild/2019q3/004553.html
+          we have now define(__sparc)
+
 2019-10-13 Luigi Scarso <luigi.scarso@gmail.com>
 	* extra features runtoks (HH)
 	* tex.getmodenames() (as these can differ per engine/version) (HH)
